# advent-of-code-2022

./: .gitignore  pyproject.toml  shell.nix
src/day1/: __init__.py
src/day2/: __init__.py  move.py  round.py  score.py
src/day3/: __init__.py  rucksacks.py
