[tool.poetry]
name = "advent-of-code-2022"
version = "0.1.0"
description = ""
authors = ["Grégoire Chauvet <gchauvet.home@gmail.com>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
mypy = "^0.991"
black = "^22.10.0"

[tool.poetry.scripts]
day1 = "src.day1:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
